<resources>
    <string name="app_name">ARC</string>
    <string name="app_name_shutter">ARC - SHUTTER</string>
    <string name="app_name_main_menu">ARC - MAIN MENU</string>
    <string name="app_name_eclipse_menu">ARC - ECLIPSE MENU</string>
    <string name="app_name_eclipse">ARC - ECLIPSE</string>
    <string name="app_name_images">ARC - IMAGES</string>
    <string name="app_name_settings">ARC - SETTINGS</string>
    <string name="conn_in_progress">Connecting…</string>
    <string name="conn_success">Connected</string>
    <string name="conn_failed">No camera found</string>
    <string name="camera_descr">Camera name and model</string>
    <string name="camera_icon_descr">Camera icon</string>
    <string name="shutter_icon_descr">Shutter icon</string>
    <string name="poff_icon_descr">Power off icon</string>
    <string name="try_again_btn">Retry</string>
    <string name="first_push_btn">1st push</string>
    <string name="shutter_activity_btn">SHUTTER</string>
    <string name="images_activity_btn">IMAGES</string>
    <string name="eclipse_activity_btn">ECLIPSE</string>
    <string name="settings_btn">SETTINGS</string>
    <string name="power_off_btn">POWER OFF</string>
    <string name="part_phase_btn">PARTIAL PHASE TIME LAPSE</string>
    <string name="total_phase_btn">TOTALITY</string>
    <string name="default_prop_text">- -</string>
    <string name="error_dialog_title">Error</string>
    <string name="confirm_dialog_title">Confirm</string>
    <string name="confirm_power_off">Do you want to switch camera off?</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancel</string>
    <string name="start_process_btn">START !!!</string>
    <string name="confirm_partial_phase_shooting">Put sun filter on lens! Press YES to start shooting.</string>
    <string name="confirm_totality_shooting">Don\'t forget to remove sun filter! Press YES to start shooting.</string>
    <string name="frames_number_label">Frames number</string>
    <string name="eclipse_warning">Set ISO = 200 \ndrivemode = Single frame.\nPut filter on lens before shooting partial phase.\nRemove filter during totality.</string>
    <string name="current_frame_number_label">Current frame:</string>
    <string name="shooting_complete_msg">COMPLETE</string>
    <!-- settings activity -->
    <string name="totality_time_label">Totality time</string>
    <string name="totality_duration_label">Totality duration</string>
    <string name="part_phase_label">PARTIAL PHASE</string>
    <string name="total_phase_label">TOTALITY</string>
    <string name="camera_mode_label">Camera mode</string>
    <string name="shut_speed_label">Shutter speed</string>
    <string name="focal_value_label">Aperture</string>
    <string name="time_lapse_interval_label">Time lapse interval</string>
    <string name="add_btn">+</string>
    <string name="sub_btn">-</string>
    <!-- preferences -->
    <string name="preference_file_name">com.fuckolympus.arc.config</string>
    <string name="totality_time">totality.time</string>
    <string name="totality_duration">totality.duration</string>
    <string name="partial_phase_shut_speed">partial.phase.shut.speed</string>
    <string name="partial_phase_focal_value">partial.phase.focal.value</string>
    <string name="time_lapse_interval">time.lapse.interval</string>
    <string name="totality_focal_value">totality.phase.focal.value</string>
    <string name="totality_shut_speed_set">totality.phase.shut.speed.set</string>
    <string name="totality_interval">totality.interval</string>

    <string name="totality_flag">totality.flag</string>
    <string name="reset_settings_btn">Set to default</string>
    <string name="totality_interval_label">Interval</string>
</resources>
