<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.fuckolympus.arc.MenuActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:weightSum="1">
        <Button
                android:text="@string/shutter_activity_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/shutterActivityButton" android:layout_weight="0.18"/>
        <Button
                android:text="@string/images_activity_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/imagesActivityButton" android:layout_weight="0.18"/>
        <Button
                android:text="@string/eclipse_activity_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/eclipseButton" android:layout_weight="0.17"/>
    </LinearLayout>
</RelativeLayout>
