<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_eclipse_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.fuckolympus.arc.EclipseMenuActivity">

    <Button
            android:text="@string/part_phase_btn"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:id="@+id/partialPhaseButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <Button
            android:text="@string/total_phase_btn"
            android:layout_width="match_parent"
            android:id="@+id/totalityButton"
            android:layout_height="96dp"
            android:layout_below="@+id/partialPhaseButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <TextView
            android:text="@string/eclipse_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/warningText" android:textColor="@color/colorAccent" android:textSize="24sp" android:layout_below="@+id/totalityButton"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_marginTop="28dp"/>
</RelativeLayout>
