<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.fuckolympus.arc.SettingsActivity">

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:layout_alignParentTop="true"
            android:id="@+id/scrollView">
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
                      android:id="@+id/vertLayout">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/totalityTimeLayout">
                <TextView
                        android:text="@string/totality_time_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/totalityTimeLabel" android:layout_weight="1"/>
                <TextView
                        android:text="@string/default_prop_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/totalityTimeText" android:layout_weight="1" android:textAlignment="center"
                        android:textStyle="bold" android:textSize="24sp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/totalityDurationLayout">
                <TextView
                        android:text="@string/totality_duration_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/totalityDurationLabel" android:layout_weight="1"/>
                <TextView
                        android:text="@string/default_prop_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/totalityDurationText" android:layout_weight="1" android:textAlignment="center"
                        android:textStyle="bold" android:textSize="24sp"/>
            </LinearLayout>
            <TextView
                    android:text="@string/part_phase_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/partPhaseLabel"
                    android:layout_marginTop="10dp" android:textAlignment="center"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/takeModePPLayout">
                <TextView
                        android:text="@string/camera_mode_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/takeModePPLabel" android:layout_weight="1"/>
                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/takeModePPSpinner" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/shutSpeedPPLayout">
                <TextView
                        android:text="@string/shut_speed_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/shutSpeedPPLabel" android:layout_weight="1"/>
                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/shutSpeedPPSpinner" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/focalValuePPLayout">
                <TextView
                        android:text="@string/focal_value_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/focalValuePPLabel" android:layout_weight="1"/>
                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/focalValuePPSpinner" android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
